--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,9 @@ figure {
 
 img {
   vertical-align: middle;
-  border-style: none; }
+  border-style: none; 
+  height:70%;
+}
 
 svg {
   overflow: hidden;
